--- a/list.html
+++ b/list.html
@@ -29,6 +29,9 @@
                 </ol>
 
             </div>
+            <label for="text_input">Text Input:</label>
+            <input id="text_input" type="text"></input>
+            <button>Add Item</button>
         </div>
     </div>
 </body>
