--- a/list.html
+++ b/list.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <!-- javascript -->
+    <script src="main.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -22,8 +24,11 @@
         <div id="todo-lists">
             <div class="list">
                 <h2 class="list-title">Groceries</h2>
-                <ol>
-                    <li>Eggs</li>
+                <ol id="grocery-list">
+                    <li>Eggs 
+                        <label for="check-eggs">Eggs</label>
+                        <input id="check-eggs" type="checkbox" class="complete-item" onclick="completeListItem(this)">
+                        <button class="delete-item" onclick="deleteListItem(this.parentNode)">X</button></li>
                     <li>Milk</li>
                     <li>Cereal</li>
                 </ol>
@@ -31,7 +36,8 @@
             </div>
             <label for="text_input">Text Input:</label>
             <input id="text_input" type="text"></input>
-            <button>Add Item</button>
+
+            <button onclick="addListItem()">Add Item</button>
         </div>
     </div>
 </body>
